use css3 media queries to avoid overflow between calendar event list and calaendar widget in user desktop

--- a/web/css/desktop.css
+++ b/web/css/desktop.css
@@ -50,27 +50,51 @@
     padding-left: 20px;
 }
 
-/* Portlet calendar */
-#portletMycalendar .details {
-    float: right;
-    margin-left: 32%;
-    padding: 0;
-    text-align: left;
-    overflow: auto;
-    width: 60%;
+@media all and (max-width: 1199px) {
+    /* Portlet calendar */
+    #portletMycalendar .details {
+        padding: 0;
+        text-align: left;
+        overflow: auto;
+        max-height: 20em;
+    }
+
+    #portletMycalendar .calendar {
+        text-align: center;
+    }
+
+    #portletMycalendar .dayWithEvent {
+        background-color: #EDF1E3;
+    }
+
+    dl.calendarDetails dd {
+        margin-left: 20px;
+    }
 }
 
-#portletMycalendar .calendar {
-    max-width: 30%;
-    text-align: center;
-}
- 
-#portletMycalendar .dayWithEvent {
-    background-color: #EDF1E3;
-}
+@media all and (min-width: 1200px) {
+    /* Portlet calendar */
+    #portletMycalendar .details {
+        float: right;
+        margin-left: 32%;
+        padding: 0;
+        text-align: left;
+        overflow: auto;
+        width: 60%;
+    }
 
-dl.calendarDetails dd {
-    margin-left: 20px;
+    #portletMycalendar .calendar {
+        max-width: 30%;
+        text-align: center;
+    }
+
+    #portletMycalendar .dayWithEvent {
+        background-color: #EDF1E3;
+    }
+
+    dl.calendarDetails dd {
+        margin-left: 20px;
+    }
 }
 
 /* Portlet right menu  */
